2016-03-16  Uwe Brauer  <oub@mat.ucm.es>

	* dl_emacs_support.m (getfiles): update the url and README-->README.org

2016-02-09  Uwe Brauer  <oub@mat.ucm.es> 

	* matlab.el (matlab-mode-version): Change version number to
	3.3.3

	* matlab-publish.el (matlab-select-publish-form): Cleanup file

	* matlab.el (matlab-change-current-directory): Applied patch,
	from an unknown source found in http://sourceforge.net/p/matlab-emacs/patches/2/
	Purpose: add the possibility to switch the matlab directory to the
	current one.

	* matlab.el (matlab-shell): Applied patch
	from http://sourceforge.net/p/matlab-emacs/patches/2/
	which results in
	(define-key km (kbd "TAB") 'matlab-shell-tab)

2016-02-09  Uwe Brauer  <oub@mat.ucm.es>

	Imported from CVS to git.

2014-11-05  zappo  <zappo@eludlam-deb6-64>

	* Makefile: (VERSION) Updated.
	(all, tags, dist): Add toolbox
	(toolbox): New rule

	* Project.ede (:version): Updated

	* templates/Makefile (VERSION): Update to minor rev.

	* toolbox/Makefile: Makefile for toolbox.

	* toolbox/Project.ede: Project file for toolbox.

	* INSTALL (tlc.el): Fix typo.

	* matlab.el (matlab-shell-completion-list):
	remove custom call to MCR with call to emacsdocomplete.m in the matlab-emacs toolbox directlry.

	* toolbox/emacsdocomplete.m:
	Command for getting completions from MATLAB for matlab-shell.

2014-11-05  zappo  <zappo@eludlam-deb6-64>

	* matlab.el (matlab-shell-completion-list):
	remove custom call to MCR with call to emacsdocomplete.m in the matlab-emacs toolbox directlry.

	* toolbox/emacsdocomplete.m:
	Command for getting completions from MATLAB for matlab-shell.

2014-09-24  zappo  <zappo@eludlam-deb6-64>

	* .cvsignore: First checkin.

2014-09-23  zappo  <zappo@eludlam-deb6-64>

	* matlab.el (matlab-shell-font-lock-keywords):
	Tweak to support some changes in error output.
	(matlab-comment): For comment on same line.  If we run out of space (fill-column)
	pull the comment closer to the code.